# agentq

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-server.yml  publish-sdk.yml  publish-server-image.yml
agentq-sdk-ts/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
agentq-sdk-ts/examples/: basic-usage.ts  custom-adapter.ts
agentq-sdk-ts/src/: core.ts  detection.ts  index.ts  logger.ts  registry.ts  types.ts  utils.ts
agentq-sdk-ts/src/__tests__/: core.test.ts  detection.test.ts  registry.test.ts  types.test.ts  utils.test.ts
agentq-sdk-ts/src/adapters/: autogen.ts  base.ts  crewai.ts  index.ts  langchain.ts  llamaindex.ts
agentq_sdk/: __init__.py  core.py  detection.py  registry.py
agentq_sdk/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  llamaindex.py
docs/: frameworks.md
examples/: README.md
examples/autogen-multi-agent/: README.md  main.py  requirements.txt
examples/chat-apps/: README.md  VERIFICATION-BATCH2.md  verify_apps.py
examples/chat-apps/code-review-assistant/: README.md  main.py
examples/chat-apps/debate-arena/: README.md  main.py
examples/chat-apps/research-assistant/: README.md  main.py
examples/chat-apps/shared/: __init__.py  agentq_setup.py  mock_llm.py
examples/chat-apps/support-bot/: README.md  main.py  requirements.txt
examples/crewai-multi-agent/: README.md  main.py  requirements.txt
examples/langchain-multi-agent/: README.md  main.py  requirements.txt
examples/native-multi-agent/: README.md  main.py  requirements.txt
sdk/: FRAMEWORKS.md  README.md  pyproject.toml
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk-ts/src/: agent.ts  context.ts  index.ts  session.ts  spans.ts  tracer.ts  types.ts
sdk-ts/src/__tests__/: agent.test.ts  context.test.ts  helpers.ts  index.test.ts  session.test.ts  spans.test.ts  tracer.test.ts
sdk-ts/src/instrumentations/: anthropic.ts  index.ts  openai.ts  vercel-ai.ts
sdk/agentq/: __init__.py  instrumentation.py  otel.py  registry.py
sdk/agentq/frameworks/: __init__.py  _langchain_handler.py  autogen_integration.py  crewai_integration.py  haystack_integration.py  langchain_integration.py  llamaindex_integration.py
sdk/agentq/integrations/: _extract.py  anthropic_patch.py  autogen_patch.py  celery_patch.py  crewai_patch.py  gemini_patch.py  langchain_patch.py  llamaindex_patch.py  openai_agents_patch.py  openai_patch.py
sdk/docs/frameworks/: autogen.md  crewai.md  langchain.md  llamaindex.md
sdk/tests/: conftest.py  test_extract.py  test_instrumentation.py  test_integration.py  test_otel.py  test_public_api.py  test_registry.py
sdk/tests/frameworks/: test_autogen_integration.py  test_crewai_integration.py  test_haystack_integration.py  test_instrument_frameworks.py  test_langchain_integration.py  test_llamaindex_integration.py
sdk/tests/integrations/: test_anthropic_patch.py  test_celery_patch.py  test_gemini_patch.py  test_openai_patch.py
sdk/tests/unit/: test_extract.py  test_instrumentation.py  test_otel.py  test_public_api.py  test_registry.py
sdk/tests/unit/integrations/: test_autogen_patch.py  test_celery_patch.py  test_crewai_patch.py  test_langchain_patch.py  test_llamaindex_patch.py  test_openai_patch.py
sdk/typescript/: .eslintrc.json  .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/src/: errors.ts  index.ts  registry.ts
sdk/typescript/src/client/: http.ts  index.ts
sdk/typescript/src/decorators/: index.ts
sdk/typescript/src/types/: index.ts
sdk/typescript/tests/: client-retry.test.ts  client.test.ts  decorators.test.ts  errors.test.ts  registry-events.test.ts  registry.test.ts  types.test.ts
server/: .env.example  Dockerfile  README.md  entrypoint.sh  middleware.ts  next.config.js  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/app/: globals.css  layout.tsx  page.tsx
server/src/client/: api.ts  client.tsx  index.ts  navigation.ts  theme-provider.tsx
server/src/lib/: database-url.ts  gemini.ts  prisma.ts
server/src/server/: analytics.ts  api-handler.test.ts  api-handler.ts  config.ts  contracts.ts  otlp-decode.ts  otlp.test.ts  otlp.ts  queue.ts  search.ts  service.ts  session-title.ts  store.ts  suggestions.test.ts  suggestions.ts  timeline.test.ts  timeline.ts
server/src/ui/: index.ts  theme.css  utils.ts
src/agentq/: __init__.py  core.py  decorator.py
src/agentq/autodetect/: __init__.py  registry.py
src/agentq/integrations/: __init__.py  autogen_integration.py  base.py  (+4 more)
tests/: test_adapters.py  test_autodetect.py  test_core.py  test_decorator.py  test_detection.py  test_integrations.py  test_registry.py
(+93 files in other folders)
